--- a/workflow/javascript/package.json
+++ b/workflow/javascript/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@dapr/dapr": "^3.4.1",
+    "@dapr/dapr": "^3.5.2",
     "axios": "^1.8.2",
     "body-parser": "^1.20.3",
     "cloudevents": "^8.0.2",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "uuid": "^9.0.1"
   }
 }
